--- a/rootProject/externals/imgui-sfml/examples/minimal/CMakeLists.txt
+++ b/rootProject/externals/imgui-sfml/examples/minimal/CMakeLists.txt
@@ -1,3 +1,6 @@
-add_executable(imgui_sfml_example_minimal main.cpp)
+add_executable(imgui_sfml_example_minimal
+  main.cpp
+  ${IMGUI_DEMO_SOURCES}
+)
+
 target_link_libraries(imgui_sfml_example_minimal PRIVATE ImGui-SFML::ImGui-SFML)
-target_compile_options(imgui_sfml_example_minimal PRIVATE ${IMGUI_SFML_WARNINGS})
